# FriendDetector_server

./: .gitignore  Makefile  Makefile.in  Recognizer.ice  RecognizerI.py  Recognizer_ice.py  config.h  config.status  configure  configure.ac  facedetect.py  logger.conf  server.py
python/: server.py
python/FriendDetector/: __init__.py
slice/: Recognizer.ice
src/: EigenFace.cpp  EigenFace.h  Makefile  Makefile.am  Makefile.in  Recognizer.cpp  Recognizer.h  RecognizerI.cpp  RecognizerI.h  eigenface.cpp  facedata.xml  iFaceIdentifier.h  init.h  main.cpp
src/training/: eigenfaceTrainer.cpp  training.txt
